@@ -8,6 +8,10 @@
 
 
 
+Daniel (17 November 2005)
+- I extended a patch from David Shaw to make libcurl _always_ provide an error
+  string in the given error buffer to address the flaw mention on 21 sep 2005.
+
 Daniel (16 November 2005)
 - Applied Albert Chin's patch that makes the libcurl.pc pkgconfig file get
   installed on 'make install' time.
